[package]
name = "query-translator"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12"
linefeed = "0.6.0"
promql =  {version= "0.1.0", path = "./promql"}
spl =  {version= "0.1.0", path = "./spl"}

[[bin]]
name = "query-translator"
path = "src/main.rs"

[workspace]
members = [
  "promql",
  "spl",
  "ast",
]